--- a/html/form.html
+++ b/html/form.html
@@ -5,7 +5,8 @@
     </head>
     <body>
         <div class="form">
-            <form action="#" method="post">
+            <form action="#
+            " method="post">
                 <div id="username1">
                     <label for="username">姓名：</label>
                     <input type="text" name="username" id="username" placeholder="用户名">
@@ -43,9 +44,8 @@
                     </select>
                     <input type="submit" name ="Submit" value="提交" >
                 </div>
-
-
             </form>
+    
         </div>
     </body>
 </HTML>
