--- a/test/demo5.html
+++ b/test/demo5.html
@@ -37,8 +37,8 @@
         }
         .square.tri5{
             border-right:30px solid white;
-            border-bottom:30px solid white;
-            border-left:30px solid white;
+            border-top:30px solid white;
+            border-bottom: red;
         }
         .square.tri6{
             border-left:30px solid white;
