--- a/test/demo11.html
+++ b/test/demo11.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>两栏布局</title>
+    <title>三栏布局</title>
     <style>
         .menu{
             width:200px;
@@ -17,16 +17,31 @@
             display:inline-block;
             clear:both;
         }
+        .aside{
+            width:200px;
+            height:600px;
+            float:right;
+            background:blue;
+        }
+        .aside::after{
+            content:' ';
+            display:inline-block;
+            clear:both;
+        }
         .main{
             margin-left:210px;
+            margin-right:210px;
             height:800px;
-            background:blue;
-            border:1px blue solid;
+            background:pink;
+            border:1px pink solid;
         }
+    </styl
     </style>
 </head>
 <body>
     <div class="menu"></div>
+    <div class="aside"></div>
     <div class="main"></div>
+
 </body>
 </html>
