文字水平居中

--- a/test/demo12.html
+++ b/test/demo12.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <div class="wrap">
-        <div class="box"></div>
+        <div class="box">宽300px,高200px，在页面水平居中</div>
     </div>
 </body>
 </html>
