--- a/test/qiyeshizhan/静态页面实战.html
+++ b/test/qiyeshizhan/静态页面实战.html
@@ -185,7 +185,7 @@
             <ul class="content clearfix">
                 <li>
                     <figure >
-                        <a href="#"><img src="http://img4q.duitang.com/uploads/item/201505/09/20150509152735_2S3VR.jpeg" alt=""></a>
+                        <a href="#"><img src="http://new-img1.ol-img.com/138/610/liXCcp0xLqqI.jpg" alt=""></a>
                         <figcaption>
                             <h4>E-Commerce</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Minima maxime quam architecto quo inventore harum exmagni,dicta impedit.</p>
@@ -194,7 +194,7 @@
                 </li>
                 <li>  
                     <figure>
-                        <a href="#"><img src="http://img4q.duitang.com/uploads/item/201505/09/20150509152735_2S3VR.jpeg" alt=""></a>
+                        <a href="#"><img src="http://new-img1.ol-img.com/138/610/liXCcp0xLqqI.jpg" alt=""></a>
                         <figcaption>
                             <h4>E-Commerce</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Minima maxime quam architecto quo inventore harum exmagni,dicta impedit.</p>
@@ -203,7 +203,7 @@
                 </li>
                 <li> 
                     <figure>
-                        <a href="#"><img src="http://img4q.duitang.com/uploads/item/201505/09/20150509152735_2S3VR.jpeg" alt=""></a>
+                        <a href="#"><img src="http://new-img1.ol-img.com/138/610/liXCcp0xLqqI.jpg" alt=""></a>
                         <figcaption>
                             <h4>E-Commerce</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Minima maxime quam architecto quo inventore harum exmagni,dicta impedit.</p>
@@ -212,7 +212,7 @@
                 </li>
                 <li> 
                     <figure>
-                        <a href="#"><img src="http://img4q.duitang.com/uploads/item/201505/09/20150509152735_2S3VR.jpeg" alt=""></a>
+                        <a href="#"><img src="http://new-img1.ol-img.com/138/610/liXCcp0xLqqI.jpg" alt=""></a>
                         <figcaption>
                             <h4>E-Commerce</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Minima maxime quam architecto quo inventore harum exmagni,dicta impedit.</p>
@@ -221,7 +221,7 @@
                 </li>
                 <li> 
                     <figure>
-                        <a href="#"><img src="http://img4q.duitang.com/uploads/item/201505/09/20150509152735_2S3VR.jpeg" alt=""></a>
+                        <a href="#"><img src="http://new-img1.ol-img.com/138/610/liXCcp0xLqqI.jpg" alt=""></a>
                         <figcaption>
                             <h4>E-Commerce</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Minima maxime quam architecto quo inventore harum exmagni,dicta impedit.</p>
@@ -230,7 +230,7 @@
                 </li>
                 <li> 
                     <figure>
-                        <a href="#"><img src="http://img4q.duitang.com/uploads/item/201505/09/20150509152735_2S3VR.jpeg" alt=""></a>
+                        <a href="#"><img src="http://new-img1.ol-img.com/138/610/liXCcp0xLqqI.jpg" alt=""></a>
                         <figcaption>
                             <h4>E-Commerce</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Minima maxime quam architecto quo inventore harum exmagni,dicta impedit.</p>
