--- a/test/qiyeshizhan/静态页面实战.html
+++ b/test/qiyeshizhan/静态页面实战.html
@@ -181,14 +181,14 @@
             display:flex;
         }
         .about li{
-            border:1px solid black;
+            border:1px solid black;          
         }
         .about li img{
-            display: inline-block;
             width:156px;
             height:156px;
             border-radius: 100%;
             border:4px solid #f1f1f1;
+            vertical-align: middle;
             
         }
         /* .about li img:nth-child(odd){
@@ -213,11 +213,21 @@
           text-align:right;
       }
       .about .detail:nth-of-type(2n-1){
-          margin-right:180px;
-          display: inline-block;
-          border:1px solid black;
+          margin-right:180px; 
       }
-      
+      .about li:nth-child(odd) img{
+          float:right;
+      }
+      .about li:nth-child(2n){
+          padding-left:calc(50% - 78px);
+          text-align: left;
+      }
+      .about .detail:nth-of-type(2n){
+          margin-left:180px;
+      }
+      .about li:nth-child(2n) img{
+          float:left;
+      }
     </style>
 </head>
 <body>
