--- a/test/qiyeshizhan/静态页面实战.html
+++ b/test/qiyeshizhan/静态页面实战.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>静态页面实战</title>
     <link rel="stylesheet" href="html/css/common.css">
     <style>
 
@@ -16,7 +16,7 @@
             background-position:30% 35%;
             
         }
-        header .navbar > a {
+        header .navbar  > a {
             color:#f7ba3e;
             font-size:20px;
             float:left;
@@ -27,7 +27,7 @@
             margin:20px 100px;
             
         }
-        header .navbar  a {
+        header .navbar > ul  a {
             color:white;
         }
         header .navbar > ul li{
