--- a/JavaScript/test/3DloginFrame/3DloginFrame.html
+++ b/JavaScript/test/3DloginFrame/3DloginFrame.html
@@ -9,11 +9,11 @@
     <style>
         @font-face {
         font-family: 'iconfont';  /* project id 964713 */
-        src: url('http://at.alicdn.com/t/font_964713_qivndi2870f.eot');
-        src: url('http://at.alicdn.com/t/font_964713_qivndi2870f.eot?#iefix') format('embedded-opentype'),
-        url('http://at.alicdn.com/t/font_964713_qivndi2870f.woff') format('woff'),
-        url('http://at.alicdn.com/t/font_964713_qivndi2870f.ttf') format('truetype'),
-        url('http://at.alicdn.com/t/font_964713_qivndi2870f.svg#iconfont') format('svg');
+        src: url('https://at.alicdn.com/t/font_964713_qivndi2870f.eot');
+        src: url('https://at.alicdn.com/t/font_964713_qivndi2870f.eot?#iefix') format('embedded-opentype'),
+        url('https://at.alicdn.com/t/font_964713_qivndi2870f.woff') format('woff'),
+        url('https://at.alicdn.com/t/font_964713_qivndi2870f.ttf') format('truetype'),
+        url('https://at.alicdn.com/t/font_964713_qivndi2870f.svg#iconfont') format('svg');
         }
         .iconfont{
             font-family: 'iconfont' !important;
