--- a/毕业设计/canvas画板续/画笔粗细＋保存功能.html
+++ b/毕业设计/canvas画板续/画笔粗细＋保存功能.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no,maximum-scale=1.0,minimum-scale=1.0">
   <title>添加画笔</title>
   <style>
-
     ul,ol{
         list-style:none;
     }
@@ -119,7 +118,7 @@ body{
     <div id="pen" class="active icon">&#xe640;</div>
     <div id="eraser" class="icon">&#xe669;</div>
     <div id="clear" class="icon">&#xe60e;</div>
-    <div id="downLoad" class="icon">&#xe62e;</div>
+    <!-- <div id="downLoad" class="icon">&#xe62e;</div> -->
   </div>
   <ol class="colors">
       <li id="red" class="red"></li>
@@ -156,6 +155,10 @@ body{
         canvas.height = pageHeight
     }
 
+    window.onresize = function(){
+        getPageSize()
+
+    }
 /*************/
     pen.onclick=function(){
         eraserEnabled = false
@@ -172,15 +175,15 @@ body{
     }
 
     //保存图片
-    downLoad.onclick = function(){
-        var url = canvas.toDataURL("image/png")
-        var a = document.createElement('a')
-        document.body.appendChild(a)
-        a.href = url
-        a.downLoad = 'downImg'
-        a.target='_blank'
-        a.click()
-    }
+    // downLoad.onclick = function(){
+    //     var url = canvas.toDataURL("image/png")
+    //     var a = document.createElement('a')
+    //     document.body.appendChild(a)
+    //     a.href = url
+    //     a.downLoad = 'downImg'
+    //     a.target='_blank'
+    //     a.click()
+    // }
 /*************/
 
 red.onclick = function(){
@@ -233,7 +236,7 @@ canvas.ontouchstart = function(e){
   console.log('touch')
   if(eraserEnabled){
     using = true
-    context.clearRect(x-5,y-5,10,10) //让橡皮擦的中心与鼠标重合
+    context.clearRect(x - 5,y - 5,10,10) //让橡皮擦的中心与鼠标重合
   }else{
     using = true
     lastPoint={x:x,y:y}
@@ -244,9 +247,10 @@ canvas.ontouchstart = function(e){
 canvas.ontouchmove = function(e){
   var x = e.touches[0].clientX     //x,y得到的坐标是相对于视口的坐标，不是canvas
   var y = e.touches[0].clientY
+  console.log('move')
   if(eraserEnabled){
     if(using){
-      context.clearRect(x-5,y-5,10,10)
+      context.clearRect(x - 5,y - 5,10,10)
     }  
   }else{
     if(using){
@@ -263,11 +267,8 @@ canvas.ontouchend = function(e){
 }
 }else{
 
-    getPageSize()
-    window.onresize = function(){
-        getPageSize()
-
-    }
+    
+    
 
   //非触屏设备
     canvas.onmousedown = function(e){
@@ -275,7 +276,7 @@ canvas.ontouchend = function(e){
         var y = e.clientY
         if(eraserEnabled){
             using = true
-            context.clearRect(x-5,y-5,10,10) //让橡皮擦的中心与鼠标重合
+            context.clearRect(x - 5,y - 5,10,10) //让橡皮擦的中心与鼠标重合
         }else{
             using = true
             lastPoint={x:x,y:y}
@@ -288,7 +289,7 @@ canvas.ontouchend = function(e){
         var y = e.clientY
         if(eraserEnabled){
             if(using){
-            context.clearRect(x-5,y-5,10,10)
+            context.clearRect(x - 5,y - 5,10,10)
             }  
         }else{
             if(using){
