修复手机滑动问题

--- a/毕业设计/canvas画板续/画笔粗细＋保存功能.html
+++ b/毕业设计/canvas画板续/画笔粗细＋保存功能.html
@@ -43,6 +43,9 @@
   background:white;
   display:block;
   border:1px solid #868383;
+  display: fixed;
+  top:0;
+  left:0;
 }
 /*默认是inline-block，canvas是等比例缩放*/
 
