手机屏幕问题修改

--- a/毕业设计/canvas画板续/画笔粗细＋保存功能.html
+++ b/毕业设计/canvas画板续/画笔粗细＋保存功能.html
@@ -150,18 +150,23 @@ body{
         context.fill()
     }
 
-    function getPageSize(){
+    function getPageSize(canvas){
         var pageWidth = document.documentElement.clientWidth
         var pageHeight = document.documentElement.clientHeight
 
         canvas.width = pageWidth
         canvas.height = pageHeight
     }
-
-    window.onresize = function(){
-        getPageSize()
+    function autoSetCanvasSize(canvas){
+        getPageSize(canvas)
+        window.onresize = function(canvas){
+        getPageSize(canvas)
 
     }
+    }
+
+    autoSetCanvasSize(canvas)
+    
 /*************/
     pen.onclick=function(){
         eraserEnabled = false
