--- a/我的FM/HTML/我的FM.html
+++ b/我的FM/HTML/我的FM.html
@@ -7,7 +7,9 @@
     <title>我的FM</title>
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/index.css">
-    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.slim.min.js"></script>
+    <!-- <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.slim.min.js"></script> -->
+    <!-- <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.slim.js"></script> -->
+    <script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
 </head>
 <body>
     <section id="page-music">
@@ -41,36 +43,38 @@
             </div>
         </main>
         <footer>
-            <div class="box layout">
+            <div class="layout">
                 <span class="iconfont icon-left">&#xe610;</span>
                 <span class="iconfont icon-right">&#xe609;</span>
-                <ul>
-                    <li>
-                        <div class="cover" style="background-image:url(../img/coca-cola.png)"></div>
-                        <h3>漫步春天</h3>
-                    </li>
-                    <li>
-                        <div class="cover" style="background-image:url(../img/coca-cola.png)"></div>
-                        <h3>漫步春天</h3>
-                    </li>
-                    <li>
-                        <div class="cover" style="background-image:url(../img/coca-cola.png)"></div>
-                        <h3>漫步春天</h3>
-                    </li>
-                    <li>
-                        <div class="cover" style="background-image:url(../img/coca-cola.png)"></div>
-                        <h3>漫步春天</h3>
-                    </li>
-                </ul>
+                <div class="box ">
+                    <ul>
+                        <li>
+                            <div class="cover" style="background-image:url(../img/coca-cola.png)"></div>
+                            <h3>漫步春天</h3>
+                        </li>
+                        <li>
+                            <div class="cover" style="background-image:url(../img/coca-cola.png)"></div>
+                            <h3>漫步春天</h3>
+                        </li>
+                        <li>
+                            <div class="cover" style="background-image:url(../img/coca-cola.png)"></div>
+                            <h3>漫步春天</h3>
+                        </li>
+                        <li>
+                            <div class="cover" style="background-image:url(../img/coca-cola.png)"></div>
+                            <h3>漫步春天</h3>
+                        </li>
+                    </ul>
+                    </div>
             </div>
+            
         </footer>
 
     </section>
     <section id="page-cover">
     </section>
     <div class="bg"></div>
-    <script scr="js/index.js"></script>
-
+    <script src="../js/index.js"></script>
 
 </body>
 </html>
