--- a/我的FM/HTML/我的FM.html
+++ b/我的FM/HTML/我的FM.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name ="referrer" content="never">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>我的FM</title>
@@ -18,7 +19,7 @@
                 <figure></figure>
                 <div class="actions">
                     <span class="btn-collect iconfont">&#xe613;</span>
-                    <span class="btn-play iconfont">&#xe645;</span>
+                    <span class="btn-play iconfont"></span>
                     <span class="btn-next iconfont">&#xe64a;</span>
                 </div>
             </div>
